Rework 'Gradle Metadata has been published' test (#16)
* Rework 'Gradle Metadata has been published' test

* Add exceptions for components where Gradle metadata is currently missing

* Fix MixinForJava8DateTimesTest on Java 17

Applies similar solution as:
https://github.com/FasterXML/jackson-modules-base/pull/198